59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
------------------------------------------------------------------------------------
CHANGELOG file
v10.03.05
	Bugfix.  syslog-ng only accepts alphanumeric idents.
	Log Enh. Document parse error more easily identified.
	Log Enh. URL parse error more easily identified.
	Bugfix.  wsstrip is ignored when value attribute is used.
v10.03.01
	Changed version / svn
v10.02.25
	Removed schema bug.
	Fixed Validation issue with john snelson (re. PSVI)
v10.02.23
	Added CURRENT_TIME
v10.02.22
	Revised error message for main file (read permissions!).
v10.02.12
	Bug in mailer: temporary files not tidied up.
v10.02.10
	Bug in store list
v10.02.02.1(b1)
	Mantis 0000028
	Public Beta 1 Branch-point
	Updated docs
v10.02.01
	Added support for CURRENT_OSI_RESPONSE
	Rewritten CURRENT_ environment handling (now in iko)
v10.01.28
	Added span delimiters to Logger.
	Added query information on error results.
v10.01.26
	Fixed bug where non result of encoder was not returning a NULL.
v10.01.25
	Added support for address boxnames in osimessage.
v10.01.21
	Started conversion to wchar_t in order to dramatically reduce transcoding.
v10.01.19
	Fixed an missing output attribute bug.
	Updated Copyright year to 2010
	Added kind fragment
	Removed bug in output to do with null parents
	value() maybe redundant - see data(//comment())
v10.01.12
	Added (decode) support for RFC 2369 headers.
v10.01.11
	Added the attribute 'angled' to message, to deal with the many angled attribute values.
	Removed a bug in the config file that was stripping rather than trimming lines.
	Added a scratch name to stop overwrites between obyx instances.
	Added qp as a decoder.
v10.01.07
	Added a default value of 0 to _parms
v9.12.18
	Added new Message compositor. Also extended the message grammar.
	Added a couple of new decoders also.
	Added character set conversion for non UTF-8 message bodies
v9.12.14
	By default, wd() now returns the environment variable PWD.